# cLnp-bot

./: .gitignore  CMakeLists.txt  compile_commands.json  flake.nix  shell.nix
include/: tic_tac_toe.hpp
src/: main.cpp  tic_tac_toe.cpp
